the_project/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
      - name: image-storage
        persistentVolumeClaim:
          claimName: image-pvc
      containers:
      - name: todo-app
        image: duonghoang711/todo-app:2.4
        volumeMounts:
        - name: image-storage
          mountPath: /usr/src/app/images
        ports:
        - containerPort: 3000
