the_project/todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: ClusterIP  # Changed from NodePort
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 3000
